<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn"
        android:id="@+id/btn1"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn2"
        android:id="@+id/btn2"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn3"
        android:id="@+id/btn3"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/galeria"
        android:id="@+id/btn4"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/facebook"
        android:id="@+id/btn5"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/youtube"
        android:id="@+id/btn6"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/boton4"
        android:id="@+id/btn7"/>

</LinearLayout>